--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <!-- About Me Section -->
   <div class="section bio-wrapper">
     <div class="bio">
-      <img src="prachi-image.jpg" alt="Prachi Trivedi photo" />
+      <img src="prachi.jpg" alt="Prachi Trivedi" />
       <div class="bio-content">
         <h2>About Me</h2>
       <p>I’m a Business Analyst with over 5.5 years of experience in customer-facing and operations roles, where I’ve learned how to turn real-world problems into practical, data-backed solutions. My work blends a sharp understanding of user behavior, process improvement, and team collaboration to help businesses run smarter.</p>
