--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
       <img src="prachi.jpg" alt="Prachi Trivedi" />
       <div class="bio-content">
         <h2>About Me</h2>
-      <p>I’m a Business Analyst with over 5 years of experience in customer-facing and operations roles, where I’ve learned how to turn real-world problems into practical, data-backed solutions. My work blends a sharp understanding of user behavior, process improvement, and team collaboration to help businesses run smarter.</p>
-      <p>I’m hands-on with tools like JIRA, Confluence, SQL, Excel, Tableau, Figma, and Salesforce CRM, and I’m especially strong at gathering requirements, working with stakeholders, making sense of data, and keeping cross-functional projects on track.</p>
-      <p>What really drives me is spotting potential issues before they slow things down and helping teams work more efficiently. I bring clarity, empathy, and results to the table, and I genuinely enjoy bridging the gap between business needs and technical solutions.</p>
-      <p style="font-weight: bold;">📌 Think of me as the connector between goals and outcomes, quietly dependable, always effective.</p>
+      <p>I’m a Business Analyst with over 5 years of experience in customer-facing and operations roles, where I’ve consistently translated real-world challenges into actionable, data-driven solutions. My work combines process improvement, stakeholder collaboration, and business insight to help teams move smarter and faster.</p>
+      <p>I’ve worked in Agile environments both internationally and in Canada, most recently leading key BA responsibilities for a tech startup in Brampton. Whether it’s gathering requirements, mapping workflows, or supporting UAT, I focus on bringing structure and clarity to complex problems.</p>
+      <p>I’m hands-on with tools like JIRA, Confluence, SQL, Excel, Power BI, Figma, and Salesforce CRM, and I enjoy bridging the gap between technical teams and business goals.</p>
+      <p style="font-weight: bold;">📌 I’m passionate about solving problems before they become blockers and helping teams deliver with confidence. I bring clarity, empathy, and a results-first mindset to every project.</p>
 
       <div class="links">
         <a href="https://www.linkedin.com/in/prachitrivedi096/" target="_blank">LinkedIn</a>
@@ -275,6 +275,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
